Add extra padding to the bottom of the text controller

--- a/wp-content/themes/workingnyc/views/base.twig
+++ b/wp-content/themes/workingnyc/views/base.twig
@@ -78,7 +78,7 @@
 
     {% block header %}
       {% include 'objects/navigation.twig' %}
-      {% include 'objects/language-switcher.twig' %}
+      {% include 'objects/text-controller.twig' %}
     {% endblock %}
 
     {% include 'objects/ie-warning.twig' %}
