--- a/wp-content/themes/workingnyc/views/objects/text-controller.twig
+++ b/wp-content/themes/workingnyc/views/objects/text-controller.twig
@@ -1,5 +1,5 @@
 <div aria-hidden="true" class="o-text-controller bg-scale-1 o-text-controller-fixed hidden" data-js="text-controller" id="aria-c-text-controller">
-	<div class="o-text-controller__inner">
+	<div class="o-text-controller__inner pb-6">
 		<div>
 			<div class="text-end">
 				<button aria-controls="aria-c-text-controller" aria-expanded="false" class="btn btn-primary btn-small" data-dropdown="close" data-js="dropdown" tabindex="-1">
@@ -13,7 +13,7 @@
 			<p class="h4 block w-full m-0 py-2 text-alt">{{__('Translate Text', 'WNYC - Navigation')}}</p>
 			<div class="o-text-controller__options">
 				<div class="o-text-controller__languages">
-          
+
           <div class="notranslate">
             {% do action('wpml_add_language_selector') %}
           </div>
