Multiple updates, see description
* Integrate Menu Pattern module and update with WAI Aria specification

* Integrate Navigation Pattern module

* Update breadcrumbs to WAI ARIA specification

* New feature. Single template Jump Navigation

* New feature. Add back to top button in Single templates

* Single template spacing updates

* Updating Rollup packages and script organization

* Integrate misc fixes from latest Working Patterns

* Other misc bug fixes

--- a/wp-content/themes/workingnyc/views/base.twig
+++ b/wp-content/themes/workingnyc/views/base.twig
@@ -69,7 +69,9 @@
     {% endif %}
   </head>
 
-  <body class="color bg-scale-2 pb-8 mb-1 tablet:pb-0 tablet:mb-0">
+  {% set navigationSpacing = 'pb-8 mb-2 tablet:pb-0 tablet:mb-0' %}
+
+  <body class="color bg-scale-2">
     {{ fn('wp_body_open') }}
 
     {% include 'services/google-tag-manager-body.twig' %}
