--- a/wp-content/themes/workingnyc/src/scss/_imports.scss
+++ b/wp-content/themes/workingnyc/src/scss/_imports.scss
@@ -10,22 +10,41 @@ $language: '' !default;
  * Custom Properties
  ********************/
 
-@forward '@nycopportunity/pattern-attribution/src/tokens';
+@forward 'tokens';
 
 /*****************************
- * Import main pattern blocks
+ * Import WNYC Pattern Blocks
  *****************************/
 
 @forward '@nycopportunity/working-patterns/src/utilities/fonts/fonts';     // If @font-face is used it needs to be imported before all other declarations.
 @forward '@nycopportunity/working-patterns/src/scss/elements';             // All Elements
 @forward '@nycopportunity/working-patterns/src/scss/components';           // All Components
-@forward '@nycopportunity/working-patterns/src/scss/objects';              // All Objects
+
+/**********
+ * Objects
+ **********/
+
+@forward '@nycopportunity/working-patterns/src/objects/banner/banner';
+@forward '@nycopportunity/working-patterns/src/objects/header/header';
+@forward '@nycopportunity/working-patterns/src/objects/footer/footer';
+@forward '@nycopportunity/working-patterns/src/objects/search/search';
+@forward '@nycopportunity/working-patterns/src/objects/text-controller/text-controller';
+
+/******************
+ * Pattern Modules
+ ******************/
+
 @forward '@nycopportunity/pattern-attribution/src/attribution';
+@forward '@nycopportunity/pattern-menu/src/menu';
+@forward '@nycopportunity/pattern-navigation/src/navigation';
+
 @forward '@nycopportunity/working-patterns/src/elements/base/first-last';  // Base elements that need to be included after other patterns to take effect
 @forward '@nycopportunity/working-patterns/src/scss/utilities';            // All Utilities
 @forward '@nycopportunity/working-patterns/dist/styles/_tailwindcss.scss'; // Tailwindcss
 @forward '@nycopportunity/working-patterns/src/utilities/color/color';     // Since we don't need a separate stylesheet for color, currently. If using a theme switcher, these could go into separate stylesheets in a similar format to languages
 
-:root {
-  --o-attribution-section-borders: 1px solid var(--color-scale-4);
+@forward 'utilities';
+
+hr {
+  border-color: var(--color-scale-4)
 }
