--- a/wp-content/themes/workingnyc/views/index.twig
+++ b/wp-content/themes/workingnyc/views/index.twig
@@ -7,49 +7,70 @@
     <div class="layout-content">
       <header class="o-header">
         <div>
-          <h1 class="o-header__title">{% if function('is_404') %}{{ __('Page Not Found', 'WNYC')}}{% else %}{{ post.title }}{% endif %}
-          </h1>
+          <h1 class="o-header__title">{% if function('is_404') %}{{ __('Page Not Found', 'WNYC') }}{% else %}{{ post.title }}{% endif %}</h1>
+
           <h2 class="o-header__subtitle text-alt">
             {% if post.content %}{{ post.content }}{% endif %}
           </h2>
+
           <p class="small">
             <span class="flex items-center">
               <svg aria-hidden="true" class="icon-wnyc-ui me-1 icon-2">
                 <use xlink:href="#info"></use>
               </svg>
+
               {{ __('Last updated', 'WNYC-Date') }}
-              {{modified_date}}
+
+              {{ modified_date }}
             </span>
           </p>
         </div>
       </header>
     </div>
 
-    {# Sections - Jump Nav #}
-    <div class="sticky top-0 bg-scale-1 z-10 layout-content">
-      <nav class="c-utility leading-normal block">
-        <span class="me-1">{{ __('Jump to', 'WNYC')}}</span>
-        <a class="btn btn-link btn-small btn-secondary font-secondary" href="#content">{{ __('Top of page', 'WNYC')}}</a>
-        {% for section in sections %}
-          <a class="btn btn-link btn-small btn-secondary font-secondary" href="#{{ section.section_title|trim|replace({' ': '-'})|lower }}">{{section.section_title}}</a>
-        {% endfor %}
-      </nav>
+    {# Jump Navigation #}
+    <div class="layout-content sticky top-0 bg-scale-1 z-20">
+      <div class="px-2 tablet:px-3">
+        <nav class="c-utility overflow-y-hidden overflow-x-auto whitespace-nowrap relative px-0" data-js="active-navigation" aria-label="Jump Navigation">
+          <span class="c-utility__item">{{ __('Jump to', 'WNYC')}}</span>
+
+          <a class="btn btn-link btn-small btn-secondary font-secondary" href="#content">{{ __('Top of page', 'WNYC') }}</a>
+
+          {% for section in sections %}
+          {% if section.section_title %}
+          <a class="btn btn-link btn-small btn-secondary font-secondary" href="#{{ section.section_title|trim|replace({' ': '-'})|lower }}">{{ section.section_title }}</a>
+          {% endif %}
+          {% endfor %}
+        </nav>
+      </div>
     </div>
 
-    {# Sections #}
     {% if sections %}
-      <section class="bg-scale-2 layout-content">
-        <div class="py-4 wrap">
+    <div class="bg-scale-2">
+      <div class="layout-content">
+        <div class="py-4 wrap" data-js="observe" data-js-observe-root="document" data-js-observe-items="heading">
           {% for section in sections %}
-            <div class="pt-utility-anchor" id="{{ section.section_title|trim|replace({' ': '-'})|lower }}">
-              <h3 class="h5 text-alt border-b border-scale-4 pb-3">
-                {{ section.section_title }}</a>
+          <section data-js-observe-item="heading" {% if not loop.last %}class="pb-6"{% endif %} {% if section.section_title %}id="{{ section.section_title|trim|replace({' ': '-'})|lower }}"{% endif %}>
+            {% if section.section_title %}
+            <div class="pt-utility-anchor bg-scale-2 sticky top-0">
+              <h3 class="h5 mt-0 text-alt border-b border-scale-4 py-3">
+                {{ section.section_title }}
               </h3>
-              <p>{{section.section_content}}</p>
             </div>
+            {% endif %}
+
+            {{ section.section_content }}
+          </section>
           {% endfor %}
         </div>
-      </section>
+      </div>
+
+      <div class="layout-content sticky bottom-0 z-10 o-navigation-spacing">
+        <div class="p-2 tablet:p-3 text-end">
+          <a class="btn btn-secondary bg-scale-1" href="#content">Back to top</a>
+        </div>
+      </div>
+    </div>
     {% endif %}
   </main>
 </div>
